--- a/autobus.html
+++ b/autobus.html
@@ -10,11 +10,14 @@
 <body>
     <header class="header">
         <div class="header-content">
+            <a href="index.html" class="escudo-header">
+                <img src="img/JerezLogov4.png" alt="Escudo de Jerez de los Caballeros">
+            </a>            
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="historia.html">Historia</a></li>
-                    <li><a href="autobus.html" >Visita</a></li>
+                    <li><a href="autobus.html">Visita</a></li>
                     <li><a href="contacto2.html">Contacto</a></li>
                 </ul>
             </nav>
@@ -22,12 +25,20 @@
                 <input type="text" id="search-input" placeholder="Buscar...">
                 <button onclick="highlightSearch()">Buscar</button>
             </div>
+            <script>
+                function highlightSearch() {
+                    const query = document.getElementById('search-input').value.toLowerCase();
+                    const bodyText = document.body.innerHTML;
+                    const highlightedText = bodyText.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
+                    document.body.innerHTML = highlightedText;
+                }
+            </script>
         </div>
     </header>
 
     <main class="main-content rutas">
         <div class="language-selector">
-            <label for="idioma">Idioma:</label>
+            <label for="idioma"></label>
             <select id="idioma" name="idioma">
                 <option value="es">Español</option>
                 <option value="en">Inglés</option>
