--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo Jerez de los Caballeros</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="img/jerezico.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="header-content">
-    
+            <a href="index.html" class="escudo-header">
+                <img src="img/JerezLogov4.png" alt="Escudo de Jerez de los Caballeros">
+            </a>            
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
@@ -18,46 +22,77 @@
                     <li><a href="contacto2.html">Contacto</a></li>
                 </ul>
             </nav>
-    <div class="search-bar-container">
-        <input type="text" id="search-input" placeholder="Buscar...">
-        <button onclick="highlightSearch()">Buscar</button>
-    </div>
-    <script>
-        function highlightSearch() {
-            const query = document.getElementById('search-input').value.toLowerCase();
-            const bodyText = document.body.innerHTML;
-            const highlightedText = bodyText.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
-            document.body.innerHTML = highlightedText;
-        }
-    </script>
-
+            <div class="search-bar-container">
+                <input type="text" id="search-input" placeholder="Buscar...">
+                <button onclick="highlightSearch()">Buscar</button>
+            </div>
+            <script>
+                function highlightSearch() {
+                    const query = document.getElementById('search-input').value.toLowerCase();
+                    const bodyText = document.body.innerHTML;
+                    const highlightedText = bodyText.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
+                    document.body.innerHTML = highlightedText;
+                }
+            </script>
         </div>
     </header>
 
     <main class="main-content">
-            <div class="language-selector">
-                <label for="idioma">Idioma:</label>
-                <select id="idioma" name="idioma">
-                    <option value="es">Español</option>
-                    <option value="en">Inglés</option>
-                    <option value="fr">Francés</option>
-                </select>
-            </div>
+        <div class="language-selector">
+            <label for="idioma"></label>
+            <select id="idioma" name="idioma">
+                <option value="es">Español</option>
+                <option value="en">Inglés</option>
+                <option value="fr">Francés</option>
+            </select>
+        </div>
         <div class="title">Bienvenidos a Jerez de los Caballeros</div>
         <div class="subtitle">Descubre los encantos de nuestra ciudad</div>
-        <div class="image-row">
-            <div class="card">
-                <a href="https://jerezcaballeros.es/la-alcazaba/" target="_blank"><img src="img/alcazaba.jpg" alt="La alcazaba"></a>
-                <h3>La alcazaba</h3>
+
+        <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <a href="https://jerezcaballeros.es/la-alcazaba/" target="_blank">
+                        <img src="img/alcazaba.jpg" class="d-block w-100 fixed-size" alt="La alcazaba">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="https://jerezcaballeros.es/san-bartolome/" target="_blank">
+                        <img src="img/JerezCaballerosSanBartolome (1).jpg" class="d-block w-100 fixed-size" alt="Iglesia de San Bartolomé">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="https://jerezloscaballeros.com/iglesia-de-san-miguel-arcangel/" target="_blank">
+                        <img src="img/A_IGLESIA_ARCIPRESTAL_SAN_MIGUEL (1).jpg" class="d-block w-100 fixed-size" alt="Iglesia de San Miguel">
+                    </a>
+                </div>
             </div>
-            <div class="card">
-                <a href="https://jerezcaballeros.es/san-bartolome/" target="_blank"><img src="img/san bartolome.jpg" alt="Iglesia de San Bartolomé"></a>
-                <h3>Iglesia de San Bartolomé</h3>
-            </div>
-            <div class="card">
-                <a href="https://jerezloscaballeros.com/iglesia-de-san-miguel-arcangel/" target="_blank"><img src="img/san-miguel.jpg" alt="Iglesia de San Miguel"></a>
-                <h3>Iglesia de San Miguel</h3>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        
+
+        <div class="audio">
+            <h3>Audioguía</h3>
+            <audio controls>
+                <source src="audio/audioguia.mp3" type="audio/mp3">
+                Tu navegador no soporta el elemento de audio.
+            </audio>
+        </div>
+
+        <div class="video">
+            <h3>Conoce Jerez de los Caballeros</h3>
+            <video controls>
+                <source src="video/video_turismo.mp4" type="video/mp4">
+                Tu navegador no soporta el formato de video.
+            </video>
+            <p class="sr-only">Este video muestra un recorrido por los puntos turísticos más emblemáticos de Jerez de los Caballeros.</p>
         </div>
     </main>
 
@@ -67,6 +102,9 @@
             <a href="https://www.facebook.com/jerezdeloscaballeros.oficial/?locale=es_LA" target="_blank"><img src="img/facebook2-removebg-preview.png" alt="Facebook"></a>
             <a href="https://www.instagram.com/aytojerezcaballeros/?hl=es" target="_blank"><img src="img/instagram-removebg-preview.png" alt="Instagram"></a>
         </div>
+        <p xmlns:cc="http://creativecommons.org/ns#">Este trabajo está bajo la licencia <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a></p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
