--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio web turístico de Jerez de los Caballeros. Descubre la historia, monumentos y mucho más de esta hermosa ciudad.">
+    <meta name="robots" content="index, follow">
     <title>Turismo Jerez de los Caballeros</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/jerezico.ico" type="image/x-icon">
@@ -11,44 +13,28 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <a href="index.html" class="escudo-header">
+            <a href="index.html" class="escudo-header" aria-label="Página de inicio">
                 <img src="img/JerezLogov4.png" alt="Escudo de Jerez de los Caballeros">
             </a>            
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="historia.html">Historia</a></li>
-                    <li><a href="autobus.html">Visita</a></li>
-                    <li><a href="contacto2.html">Contacto</a></li>
+                    <li><a href="index.html" aria-label="Ir a inicio">Inicio</a></li>
+                    <li><a href="historia.html" aria-label="Ir a historia">Historia</a></li>
+                    <li><a href="autobus.html" aria-label="Ir a visita">Visita</a></li>
+                    <li><a href="contacto2.html" aria-label="Ir a contacto">Contacto</a></li>
                 </ul>
             </nav>
             <div class="search-bar-container">
-                <input type="text" id="search-input" placeholder="Buscar...">
-                <button onclick="highlightSearch()">Buscar</button>
+                <input type="text" id="search-input" placeholder="Buscar..." aria-label="Buscar en la página">
+                <button id="search-button" aria-label="Buscar" onclick="highlightSearch()">Buscar</button>
             </div>
-            <script>
-                function highlightSearch() {
-                    const query = document.getElementById('search-input').value.toLowerCase();
-                    const bodyText = document.body;
-                    const walker = document.createTreeWalker(bodyText, NodeFilter.SHOW_TEXT, null, false);
-                    let node;
-                    while (node = walker.nextNode()) {
-                        const textContent = node.textContent.toLowerCase();
-                        if (textContent.includes(query) && query !== "") {
-                            const highlighted = node.textContent.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
-                            const span = document.createElement('span');
-                            span.innerHTML = highlighted;
-                            node.parentNode.replaceChild(span, node);
-                        }
-                    }
-                }
-            </script>
         </div>
     </header>
 
     <main class="main-content">
         <div class="language-selector">
-            <select id="idioma" name="idioma">
+            <label for="idioma" class="sr-only">Seleccionar idioma</label>
+            <select id="idioma" name="idioma" aria-label="Seleccionar idioma">
                 <option value="es">Español</option>
                 <option value="en">Inglés</option>
                 <option value="fr">Francés</option>
@@ -60,17 +46,17 @@
         <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="https://jerezcaballeros.es/la-alcazaba/" target="_blank">
-                        <img src="img/alcazaba.jpg" class="d-block w-100 fixed-size" alt="La alcazaba">
+                    <a href="https://jerezcaballeros.es/la-alcazaba/" target="_blank" title="Visitar La Alcazaba de Jerez">
+                        <img src="img/alcazaba.jpg" class="d-block w-100 fixed-size" alt="La alcazaba de Jerez">
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="https://jerezcaballeros.es/san-bartolome/" target="_blank">
+                    <a href="https://jerezcaballeros.es/san-bartolome/" target="_blank" title="Visitar la Iglesia de San Bartolomé">
                         <img src="img/JerezCaballerosSanBartolome (1).jpg" class="d-block w-100 fixed-size" alt="Iglesia de San Bartolomé">
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="https://jerezloscaballeros.com/iglesia-de-san-miguel-arcangel/" target="_blank">
+                    <a href="https://jerezloscaballeros.com/iglesia-de-san-miguel-arcangel/" target="_blank" title="Visitar la Iglesia de San Miguel">
                         <img src="img/A_IGLESIA_ARCIPRESTAL_SAN_MIGUEL (1).jpg" class="d-block w-100 fixed-size" alt="Iglesia de San Miguel">
                     </a>
                 </div>
@@ -84,13 +70,12 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        
 
         <div class="audio">
             <h3>Audioguía</h3>
             <audio controls>
                 <source src="audio/audioguia.mp3" type="audio/mp3">
-                Tu navegador no soporta el elemento de audio.
+                Este navegador no soporta el elemento de audio.
             </audio>
         </div>
 
@@ -114,9 +99,30 @@
                 <img src="img/instagram-removebg-preview.png" alt="Instagram">
             </a>
         </div>
-        <p xmlns:cc="http://creativecommons.org/ns#">Este trabajo está bajo la licencia <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a></p>
+        <p xmlns:cc="http://creativecommons.org/ns#">Este trabajo está bajo la licencia <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;" title="Licencia Creative Commons BY-NC-SA 4.0">CC BY-NC-SA 4.0</a></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JavaScript para la funcionalidad de búsqueda -->
+    <script>
+        document.getElementById('search-button').addEventListener('click', highlightSearch);
+
+        function highlightSearch() {
+            const query = document.getElementById('search-input').value.toLowerCase();
+            const bodyText = document.body;
+            const walker = document.createTreeWalker(bodyText, NodeFilter.SHOW_TEXT, null, false);
+            let node;
+            while (node = walker.nextNode()) {
+                const textContent = node.textContent.toLowerCase();
+                if (textContent.includes(query) && query !== "") {
+                    const highlighted = node.textContent.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
+                    const span = document.createElement('span');
+                    span.innerHTML = highlighted;
+                    node.parentNode.replaceChild(span, node);
+                }
+            }
+        }
+    </script>
 </body>
 </html>
