--- a/historia.html
+++ b/historia.html
@@ -11,35 +11,27 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <a href="index.html" class="escudo-header">
+            <a href="index.html" class="escudo-header" aria-label="Página de inicio">
                 <img src="img/JerezLogov4.png" alt="Escudo de Jerez de los Caballeros">
             </a>            
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="historia.html">Historia</a></li>
-                    <li><a href="autobus.html">Visita</a></li>
-                    <li><a href="contacto2.html">Contacto</a></li>
+                    <li><a href="index.html" aria-label="Ir a inicio">Inicio</a></li>
+                    <li><a href="historia.html" aria-label="Ir a historia">Historia</a></li>
+                    <li><a href="autobus.html" aria-label="Ir a visita">Visita</a></li>
+                    <li><a href="contacto2.html" aria-label="Ir a contacto">Contacto</a></li>
                 </ul>
             </nav>
             <div class="search-bar-container">
-                <input type="text" id="search-input" placeholder="Buscar...">
-                <button onclick="highlightSearch()">Buscar</button>
+                <input type="text" id="search-input" placeholder="Buscar..." aria-label="Buscar en la página">
+                <button id="search-button" aria-label="Buscar" onclick="highlightSearch()">Buscar</button>
             </div>
-            <script>
-                function highlightSearch() {
-                    const query = document.getElementById('search-input').value.toLowerCase();
-                    const bodyText = document.body.innerHTML;
-                    const highlightedText = bodyText.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
-                    document.body.innerHTML = highlightedText;
-                }
-            </script>
         </div>
     </header>
 
     <main class="main-content historia">
         <div class="language-selector">
-            <label for="idioma"></label>
+            <label for="idioma">Idioma</label>
             <select id="idioma" name="idioma">
                 <option value="es">Español</option>
                 <option value="en">Inglés</option>
@@ -96,6 +88,26 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        document.getElementById('search-button').addEventListener('click', highlightSearch);
+
+        function highlightSearch() {
+            const query = document.getElementById('search-input').value.toLowerCase();
+            const bodyText = document.body;
+            const walker = document.createTreeWalker(bodyText, NodeFilter.SHOW_TEXT, null, false);
+            let node;
+            while (node = walker.nextNode()) {
+                const textContent = node.textContent.toLowerCase();
+                if (textContent.includes(query) && query !== "") {
+                    const highlighted = node.textContent.replace(new RegExp(query, 'gi'), match => `<mark>${match}</mark>`);
+                    const span = document.createElement('span');
+                    span.innerHTML = highlighted;
+                    node.parentNode.replaceChild(span, node);
+                }
+            }
+        }
+    </script>
 
 </body>
 </html>
