--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main class="main-content">
         <div class="language-selector">
-            <label for="idioma" class="sr-only">Seleccionar idioma</label>
+            <label for="idioma" class="sr-only">Idioma</label>
             <select id="idioma" name="idioma" aria-label="Seleccionar idioma">
                 <option value="es">Español</option>
                 <option value="en">Inglés</option>
@@ -104,7 +104,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- JavaScript para la funcionalidad de búsqueda -->
     <script>
         document.getElementById('search-button').addEventListener('click', highlightSearch);
 
