--- a/contacto2.html
+++ b/contacto2.html
@@ -92,9 +92,14 @@
     <footer class="footer">
         <p>Explora Jerez y déjate llevar por su encanto.</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/jerezdeloscaballeros.oficial/?locale=es_LA" target="_blank"><img src="img/facebook2-removebg-preview.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/aytojerezcaballeros/?hl=es" target="_blank"><img src="img/instagram-removebg-preview.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/jerezdeloscaballeros.oficial/?locale=es_LA" target="_blank" aria-label="Facebook Jerez de los Caballeros">
+                <img src="img/facebook2-removebg-preview.png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/aytojerezcaballeros/?hl=es" target="_blank" aria-label="Instagram Jerez de los Caballeros">
+                <img src="img/instagram-removebg-preview.png" alt="Instagram">
+            </a>
         </div>
+        <p xmlns:cc="http://creativecommons.org/ns#">Este trabajo está bajo la licencia <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;" title="Licencia Creative Commons BY-NC-SA 4.0">CC BY-NC-SA 4.0</a></p>
     </footer>
 
     <script>
