--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         </div>
 
         <div class="audio">
-            <h3>Audioguía</h3>
+            <h3>Audioguia</h3>
             <audio controls>
-                <source src="audio/audioguia.mp3" type="audio/mp3">
+                <source src="audio/audioguiamaruv2.mp3" type="audio/mp3">
                 Este navegador no soporta el elemento de audio.
             </audio>
-        </div>
+        </div>        
 
         <div class="video">
-            <h3>Conoce Jerez de los Caballeros</h3>
+            <h3>Vistazo a Jerez</h3>
             <video controls>
-                <source src="video/video_turismo.mp4" type="video/mp4">
+                <source src="video/videojerez.mp4" type="video/mp4">
                 Tu navegador no soporta el formato de video.
             </video>
             <p class="sr-only">Este video muestra un recorrido por los puntos turísticos más emblemáticos de Jerez de los Caballeros.</p>
